[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/green.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/brown.png" type="Texture" id=3]
[ext_resource path="res://scenes/ParticleSpawner.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
height = 6.0

[node name="Enemy" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="PlayerPointer" type="RayCast2D" parent="."]
visible = false
enabled = true

[node name="Sprite" type="Sprite" parent="PlayerPointer"]
scale = Vector2( 0.1, 1 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -16, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 0 )
rotation = 1.57079
scale = Vector2( 0.640218, 0.760077 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4, 0 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="EnemyParticles" parent="." instance=ExtResource( 4 )]
position = Vector2( -22, 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
